--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page - Yussuf Sassi</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="https://yussufsassi.github.io/landingpage/public/style.css">
 </head>
 <body>
     
@@ -29,7 +29,7 @@
         <label for="checkbox"></label>
     </div>
     <div class="imglayer">
-        <img src="/assets/Night_4.png" alt="shop" id="shops">
+        <img src="https://yussufsassi.github.io/landingpage/assets/Night_4.png" alt="shop" id="shops">
     </div>
     <h4>
         <span class="hours">0</span>
@@ -39,6 +39,6 @@
 </div>
 
 
-    <script src="/public/main.js"></script>
+    <script src="https://yussufsassi.github.io/landingpage/public/main.js"></script>
 </body>
 </html>
